# tssproAI

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  deploy.env.example  docker-compose.2gb.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 024_user_locale.py  027_user_weekly_summaries.py  028_wellness_sleep_source.py  029_user_timezone.py  030_intervals_oauth_auth_type.py  031_add_is_athlete_to_athlete_profile.py  032_add_is_athlete_to_athlete_profile.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  athlete_profile.py  auth.py  billing.py  chat.py  intervals.py  nutrition.py  photo.py  users.py  wellness.py  workouts.py
backend/app/core/: auth.py  scheduler_lock.py  upload.py
backend/app/models/: athlete_profile.py  intervals_credentials.py  user.py  wellness_cache.py
backend/app/schemas/: nutrition.py  orchestrator.py  sleep_extraction.py  wellness.py
backend/app/services/: datetime_prompt.py  gemini_nutrition.py  gemini_photo_analyzer.py  gemini_sleep_parser.py  intervals_client.py  intervals_sync.py  orchestrator.py  retention.py  sleep_analysis.py  stripe_service.py  user_type.py  weekly_summary.py
backend/tests/: test_orchestrator.py  test_scheduler_lock.py
deploy/: Caddyfile  README-dev.md  analyze-server.sh  bootstrap-dev.sh  restore-from-s3.sh
docs/: ADDING_NEW_LANGUAGE.md  DEPLOY.md  ERRORS_AND_FIXES.md  I18N_TODO.md  ROADMAP_PRODUCTION.md  VERSIONING.md
frontend/: App.tsx  Dockerfile  app.json  (+4 more)
(+80 files in other folders)
